# BibaProj

./: .gitignore  CMakeLists.txt  LICENSE.md  THIRD_PARTY_LICENSES.md
shaders/: cfg.json  shd.frag  shd.vert
src/: BibaProj.cpp  BibaProj.h  Test.h
src/engine/gameobj/: GameObject.h
src/engine/gameobj/camera/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
src/engine/gameobj/nested/: Material.h  MeshPrimitive.h  Texture.h  Transform.cpp  Transform.h
src/engine/maths/: DualQuat.cpp  DualQuat.h  Mat4.cpp  Mat4.h  Quat.cpp  Quat.h  Tangent4.h  Util.cpp  Util.h  Vector2.h  Vector3.h  Vector4.h  Vertex.h
src/engine/scene/: Scene.cpp  Scene.h  SceneContainer.h  SceneLoader.cpp  SceneLoader.h
src/engine/util/: Cfg.h  EnumHandler.h  Logger.cpp  Logger.h  ProjectPath.cpp  ProjectPath.h
src/engine/visual/: CommandPoolWrap.cpp  CommandPoolWrap.h  DepthBuffer.cpp  DepthBuffer.h  DeviceWrap.cpp  DeviceWrap.h  InstanceWrap.cpp  InstanceWrap.h  MeshBufferManager.cpp  MeshBufferManager.h  PhysicalDeviceWrap.cpp  PhysicalDeviceWrap.h  QueueWrap.cpp  QueueWrap.h  Renderer.cpp  Renderer.h  ResourceFiller.cpp  ResourceFiller.h  ShaderManager.cpp  ShaderManager.h  SurfaceWrap.cpp  SurfaceWrap.h  SwapchainResourceManager.cpp  SwapchainResourceManager.h  SwapchainWrap.cpp  SwapchainWrap.h  VulkanContext.cpp  VulkanContext.h  VulkanLifeCycle.cpp  VulkanLifeCycle.h  WindowWrap.cpp  WindowWrap.h
src/engine/visual/util/: BufferUtil.cpp  BufferUtil.h  QueueFamilyIndices.h  UniformBufferObject.h
